# zabbix-telegram-bot-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker_prune_and_up.sh
docker_sys/reverse-proxy/: docker-compose.yml  obtain_cert.sh
docker_sys/reverse-proxy/etc/nginx/conf.d/: sslip.io.conf
docker_sys/zabbix_tg/: allowed_users.txt
docs/: ZABBIX_SETUP.md
src/: main.rs
